<resources>
    <string name="app_name">UDS Pautas</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="sign_up">Cadastrar</string>
    <string name="email_required">Digite o email</string>
    <string name="password_required">Digite a senha</string>
    <string name="invalid_email">Email inválido</string>
    <string name="wrong_password">Senha incorreta</string>
    <string name="email_not_found">Email não encontrado</string>
    <string name="name_required">Digite seu nome</string>
    <string name="passwords_dont_match">As senhas devem ser iguais</string>
    <string name="name">Nome</string>
    <string name="password_confirm">Confirme a senha</string>
    <string name="user_created">Cadastro efetuado</string>
    <string name="email_already_used">Email já cadastrado</string>
    <string name="msg_recover_password">Insira o email e enviaremos uma mensagem com as instruções de recuperação de senha.</string>
    <string name="send_email">Enviar email</string>
    <string name="msg_recover_check_email">Sua senha foi enviada por email</string>
    <string name="ok">OK</string>
    <string name="open_agendas">Abertas</string>
    <string name="closed_agendas">Finalizadas</string>
    <string name="logout">sair</string>
    <string name="profile">Perfil</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="details">Detalhes</string>
    <string name="finish">Finalizar</string>
    <string name="author">Autor</string>
    <string name="title_required">Digite o título</string>
    <string name="description_required">Digite uma descrição</string>
    <string name="details_required">Digite o detalhamento</string>
    <string name="author_required">Digite o nome do autor</string>
    <string name="reopen">Reabrir</string>
    <string name="empty_agenda_list">Nenhuma pauta %s encontrada</string>
    <string name="open_agenda">aberta</string>
    <string name="closed_agenda">finalizada</string>
    <string name="add_agenda">Adicionar Pauta</string>
</resources>
